--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>retoautentia</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>retoautentia</name>
-	<description>Sample of clean architecture with spring boot</description>
+	<description>Aplicación para el reto Autentia</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
