--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,20 +5,12 @@ spring:
     name: reto-autentia
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: "jdbc:mysql://localhost:33060/prueba"
+    # url: "jdbc:mysql://localhost:3306/rau"
+    url: {{ SPRING_DATASOURCE_URL }}
     username: root
     password: admin
-    # driver-class-name: org.h2.Driver
-    # username: root
-    # password: admin
-    # url: "jdbc:h2:mem:transfers;DB_CLOSE_ON_EXIT=FALSE"
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
   jpa:
     show-sql: true
-    # database-platform: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: create-drop
