--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
     name: reto-autentia
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    # url: "jdbc:mysql://localhost:3306/rau"
-    url: {{ SPRING_DATASOURCE_URL }}
+    url: "jdbc:mysql://localhost:3306/rau"
+    #url: {{ SPRING_DATASOURCE_URL }}
     username: root
     password: admin
   jpa:
