--- a/sonar.properties
+++ b/sonar.properties
@@ -7,3 +7,6 @@ sonar.projectKey=RA-Backend
 sonar.projectVersion=1.0.1
 sonar.host.url=http://localhost:9000
 sonar.login=sqp_00e671fc305c89918ed638239790f840e42f4042
+sonar.issue.ignore.multicriteria=e1
+sonar.issue.ignore.multicriteria.e1.ruleKey=java:S1068
+sonar.issue.ignore.multicriteria.e1.resourceKey=**/*
